--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 server.port=8888
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.timeout=360
