--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=jeanva
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.config-location=classpath:mybatis-config.xml
